[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/piano.png" type="Texture" id=1]
[ext_resource path="res://src/Piano.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/piano_1.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/piano_3.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/piano_2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/piano_4.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/piano_6.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/piano_5.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/piano_7.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 1 )

[node name="Piano" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -16.5 )

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShapeClavier" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 2 )
one_way_collision = true

[node name="C" type="Area2D" parent="."]
collision_layer = 2

[node name="Do" type="CollisionShape2D" parent="C"]
position = Vector2( -18, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="Do" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="Re" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Mi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Fa" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Sol" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="La" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Si" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="D" type="Area2D" parent="."]
collision_layer = 2

[node name="Re" type="CollisionShape2D" parent="D"]
position = Vector2( -12, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="E" type="Area2D" parent="."]
collision_layer = 2

[node name="Mi" type="CollisionShape2D" parent="E"]
position = Vector2( -6, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="F" type="Area2D" parent="."]
collision_layer = 2

[node name="Fa" type="CollisionShape2D" parent="F"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="G" type="Area2D" parent="."]
collision_layer = 2

[node name="Sol" type="CollisionShape2D" parent="G"]
position = Vector2( 6, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="A" type="Area2D" parent="."]
collision_layer = 2

[node name="La2" type="CollisionShape2D" parent="A"]
position = Vector2( 12, -16 )
shape = SubResource( 3 )
one_way_collision = true

[node name="B" type="Area2D" parent="."]
collision_layer = 2

[node name="Si" type="CollisionShape2D" parent="B"]
position = Vector2( 18, -16 )
shape = SubResource( 3 )
one_way_collision = true

[connection signal="body_entered" from="C" to="." method="_on_C_body_entered"]
[connection signal="body_entered" from="D" to="." method="_on_D_body_entered"]
[connection signal="body_entered" from="E" to="." method="_on_E_body_entered"]
[connection signal="body_entered" from="F" to="." method="_on_F_body_entered"]
[connection signal="body_entered" from="G" to="." method="_on_G_body_entered"]
[connection signal="body_entered" from="A" to="." method="_on_A_body_entered"]
[connection signal="body_entered" from="B" to="." method="_on_B_body_entered"]
